Fix wave spacing, clean up code, style navigation

--- a/src/scss/partials/_navigation.scss
+++ b/src/scss/partials/_navigation.scss
@@ -6,7 +6,7 @@ nav.main-nav {
     justify-content: center;
 
     background-color: var(--color-navigation);
-    color: var(--color-navigation-text);
+    color: var(--color-navigation-inactive);
     box-shadow: 1px 1px 11px 2px rgba(0,0,0,0.75);
     -webkit-box-shadow: 1px 1px 11px 2px rgba(0,0,0,0.75);
     -moz-box-shadow: 1px 1px 11px 2px rgba(0,0,0,0.75);
@@ -14,12 +14,23 @@ nav.main-nav {
     transition: color 250ms, background-color 250ms;
 
     .nav-entry {
-        margin: 40px 60px;
+        padding: 40px 40px;
         display: flex;
         align-items: center;
         justify-content: center;
         cursor: pointer;
+        transition: background-color 150ms;
 
-        &.active {}
+        &:not(.disabled):hover {
+            background-color: var(--color-navigation-hover);
+        }
+
+        &.active {
+            color: var(--color-navigation-active);
+        }
+
+        &.disabled {
+            color: var(--color-navigation-disabled);
+        }
     }
 }
