--- a/src/scss/settings/colors.scss
+++ b/src/scss/settings/colors.scss
@@ -5,3 +5,8 @@ $color-almost-black: #090909;
 $color-mystic-purple: #0a0011;
 $color-deep-blue: #010724;
 $color-gray-light: #e6e6e6;
+$color-gray-light2: #cecece;
+$color-gray-light3: #b6b6b6;
+$color-gray: #a1a1a1;
+$color-gray2: #888888;
+$color-gray3: #6d6d6d;
